Fix dynamic type support everywhere

--- a/Relisten/Controllers/Cells/IGSourceCell.xib
+++ b/Relisten/Controllers/Cells/IGSourceCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -12,17 +13,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1:03:58" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23D-WL-sRV">
                         <rect key="frame" x="8" y="13" width="160" height="20"/>
+                        <animations/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyU-uH-gO9">
                         <rect key="frame" x="168" y="13" width="25" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="8Br-9x-fFg"/>
                             <constraint firstAttribute="height" constant="21" id="yGL-OY-lKh"/>
@@ -31,8 +34,9 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Taper" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeJ-pc-opM">
-                        <rect key="frame" x="8" y="40" width="50" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taper" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeJ-pc-opM">
+                        <rect key="frame" x="8" y="41" width="50" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="NEN-Lu-Lug"/>
                             <constraint firstAttribute="width" constant="50" id="Z3Q-bq-86h"/>
@@ -41,17 +45,9 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unknown" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwI-ld-MOG">
-                        <rect key="frame" x="66" y="41" width="246" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="6kG-kt-e74"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgh-qt-SU9">
                         <rect key="frame" x="8" y="70" width="50" height="15"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="s7a-C0-tA1"/>
                         </constraints>
@@ -61,26 +57,30 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="this is a really long source that should wrap onto another line" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="246" translatesAutoresizingMaskIntoConstraints="NO" id="I4v-21-DbC">
                         <rect key="frame" x="66" y="70" width="246" height="31"/>
+                        <animations/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="this is a really long source that should wrap onto another line" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="246" translatesAutoresizingMaskIntoConstraints="NO" id="UUe-3v-ept">
-                        <rect key="frame" x="66" y="108" width="246" height="33"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this is a really long source that should wrap onto another line" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="246" translatesAutoresizingMaskIntoConstraints="NO" id="UUe-3v-ept">
+                        <rect key="frame" x="66" y="109" width="246" height="31"/>
+                        <animations/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sXe-y0-lco" customClass="AXRatingView">
                         <rect key="frame" x="201" y="9" width="111" height="27"/>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="27" id="KuX-0P-g60"/>
                             <constraint firstAttribute="width" constant="111" id="OBE-SV-kFI"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Lineage" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viW-FW-p7x">
-                        <rect key="frame" x="8" y="108" width="50" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lineage" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viW-FW-p7x">
+                        <rect key="frame" x="8" y="109" width="50" height="15"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="lIL-K7-ipZ"/>
                         </constraints>
@@ -88,11 +88,23 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unknown" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwI-ld-MOG">
+                        <rect key="frame" x="66" y="41" width="246" height="21"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="6kG-kt-e74"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="EeJ-pc-opM" firstAttribute="top" secondItem="23D-WL-sRV" secondAttribute="bottom" constant="8" id="1Te-BA-0qS"/>
                     <constraint firstItem="UUe-3v-ept" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="8yA-Ug-qoa"/>
                     <constraint firstItem="EeJ-pc-opM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Bsv-aZ-7UF"/>
+                    <constraint firstItem="kwI-ld-MOG" firstAttribute="firstBaseline" secondItem="EeJ-pc-opM" secondAttribute="firstBaseline" id="GYI-AD-qH2"/>
                     <constraint firstItem="kwI-ld-MOG" firstAttribute="top" secondItem="sXe-y0-lco" secondAttribute="bottom" constant="5" id="I81-08-lcZ"/>
                     <constraint firstItem="kwI-ld-MOG" firstAttribute="leading" secondItem="EeJ-pc-opM" secondAttribute="trailing" constant="8" id="MSh-ps-NVn"/>
                     <constraint firstItem="UUe-3v-ept" firstAttribute="leading" secondItem="viW-FW-p7x" secondAttribute="trailing" constant="8" id="OMZ-ve-lnk"/>
@@ -106,6 +118,7 @@
                     <constraint firstItem="viW-FW-p7x" firstAttribute="firstBaseline" secondItem="UUe-3v-ept" secondAttribute="firstBaseline" id="gjy-rH-i2Q"/>
                     <constraint firstItem="UUe-3v-ept" firstAttribute="top" secondItem="I4v-21-DbC" secondAttribute="bottom" constant="8" id="lDV-DW-Qi4"/>
                     <constraint firstItem="I4v-21-DbC" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="m25-7e-lbl"/>
+                    <constraint firstItem="kwI-ld-MOG" firstAttribute="top" secondItem="EeJ-pc-opM" secondAttribute="top" id="oZo-uE-WK6"/>
                     <constraint firstItem="I4v-21-DbC" firstAttribute="top" secondItem="kwI-ld-MOG" secondAttribute="bottom" constant="8" id="oax-ly-VWs"/>
                     <constraint firstItem="RyU-uH-gO9" firstAttribute="leading" secondItem="23D-WL-sRV" secondAttribute="trailing" id="pih-gw-0ti"/>
                     <constraint firstItem="sXe-y0-lco" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="qxw-K5-QVd"/>
@@ -114,7 +127,14 @@
                     <constraint firstItem="RyU-uH-gO9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="u1n-ys-Nco"/>
                     <constraint firstItem="sXe-y0-lco" firstAttribute="leading" secondItem="RyU-uH-gO9" secondAttribute="trailing" constant="8" id="uiB-uK-g20"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="I81-08-lcZ"/>
+                        <exclude reference="oZo-uE-WK6"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="uiLabelDuration" destination="23D-WL-sRV" id="XfH-sJ-7Qf"/>
                 <outlet property="uiLabelLineage" destination="UUe-3v-ept" id="Wu6-Y0-zwt"/>
@@ -122,6 +142,9 @@
                 <outlet property="uiLabelSource" destination="I4v-21-DbC" id="csu-mh-syp"/>
                 <outlet property="uiLabelTaper" destination="kwI-ld-MOG" id="gvC-Af-mXb"/>
                 <outlet property="uiRatingView" destination="sXe-y0-lco" id="KOf-lZ-bUx"/>
+                <outlet property="uiTitleLabelLineage" destination="viW-FW-p7x" id="FKI-x8-fcK"/>
+                <outlet property="uiTitleLabelSource" destination="Sgh-qt-SU9" id="oJY-FI-bLK"/>
+                <outlet property="uiTitleLabelTaper" destination="EeJ-pc-opM" id="FtZ-Sv-ZjW"/>
             </connections>
             <point key="canvasLocation" x="339" y="615"/>
         </tableViewCell>
