--- a/PhishOD/MediaPlayer/Bottom Bar/NowPlayingBarViewController.xib
+++ b/PhishOD/MediaPlayer/Bottom Bar/NowPlayingBarViewController.xib
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D2134" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NowPlayingBarViewController">
             <connections>
+                <outlet property="bufferingIndicator" destination="iUW-SE-y2t" id="vzw-6B-Wz3"/>
                 <outlet property="buttonMore" destination="dTN-Qi-HSH" id="ism-pP-fjd"/>
                 <outlet property="buttonPause" destination="vIP-oh-w4f" id="3Fb-pV-ldE"/>
                 <outlet property="buttonPlay" destination="fYU-NR-Uuc" id="sQD-Pg-wZ5"/>
@@ -26,9 +28,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" id="rVN-Bd-hnr">
-                    <rect key="frame" x="0.0" y="5.5" width="44" height="44"/>
+                    <rect key="frame" x="0.0" y="6" width="44" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <subviews>
+                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" id="iUW-SE-y2t">
+                            <rect key="frame" x="4" y="3" width="37" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                        </activityIndicatorView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="fYU-NR-Uuc">
                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -82,7 +88,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                 </progressView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="dTN-Qi-HSH">
-                    <rect key="frame" x="278" y="5.5" width="44" height="44"/>
+                    <rect key="frame" x="278" y="6" width="44" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <state key="normal" image="dots"/>
                     <connections>
@@ -107,9 +113,4 @@
         <image name="pause-icon-white" width="10" height="16"/>
         <image name="play-icon-white" width="16" height="18"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
