--- a/PhishOD/Panels/Cells/PHODTrackCell.xib
+++ b/PhishOD/Panels/Cells/PHODTrackCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,36 +15,50 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XBD-sZ-cdj">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wbp-Lq-scu">
+                                <rect key="frame" x="299" y="0.0" width="1" height="43"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.3235294117647059" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="Xtr-rY-tmo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Wbp-Lq-scu" secondAttribute="bottom" id="147-cb-cwX"/>
+                            <constraint firstAttribute="trailing" secondItem="Wbp-Lq-scu" secondAttribute="trailing" id="1Id-vK-qW5"/>
+                            <constraint firstItem="Wbp-Lq-scu" firstAttribute="top" secondItem="XBD-sZ-cdj" secondAttribute="top" id="QH7-kC-2wa"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1966" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w7J-kL-9Yf">
-                        <rect key="frame" x="50" y="9" width="185" height="27"/>
-                        <animations/>
+                        <rect key="frame" x="47" y="9" width="184" height="27"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1:48:32" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUU-dg-B4L">
-                        <rect key="frame" x="262" y="12" width="42" height="21"/>
-                        <animations/>
+                        <rect key="frame" x="236" y="12" width="42" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="42" id="uYy-p1-VHO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euE-3F-M5d">
-                        <rect key="frame" x="15" y="14" width="30" height="17"/>
-                        <animations/>
+                        <rect key="frame" x="15" y="14" width="27" height="17"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="oax-ab-GCO"/>
+                            <constraint firstAttribute="width" constant="27" id="oax-ab-GCO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qXW-ld-nrJ" customClass="NAKPlaybackIndicatorView">
                         <rect key="frame" x="15" y="17" width="13" height="12"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="13" id="DoT-dZ-DMp"/>
@@ -56,14 +70,12 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7n-Nf-q4m" userLabel="Heatmap Value">
                                 <rect key="frame" x="0.0" y="27" width="4" height="5"/>
-                                <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.50196078431372548" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="5" id="B96-4t-r7I" userLabel="Heatmap Value Height"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" red="0.0" green="0.71764705880000002" blue="0.51764705879999995" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="H7n-Nf-q4m" secondAttribute="bottom" id="IN4-QY-VRb"/>
@@ -74,10 +86,9 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RC7-b5-9JQ">
-                        <rect key="frame" x="240" y="11" width="22" height="22"/>
-                        <animations/>
+                        <rect key="frame" x="277" y="11" width="38" height="22"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="22" id="7W2-mq-j0m"/>
+                            <constraint firstAttribute="width" constant="38" id="7W2-mq-j0m"/>
                         </constraints>
                         <state key="normal" image="more"/>
                         <connections>
@@ -85,34 +96,39 @@
                         </connections>
                     </button>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="w7J-kL-9Yf" firstAttribute="leading" secondItem="euE-3F-M5d" secondAttribute="trailing" constant="5" id="5T6-wy-WPx"/>
-                    <constraint firstItem="RC7-b5-9JQ" firstAttribute="leading" secondItem="w7J-kL-9Yf" secondAttribute="trailing" constant="5" id="6Bd-X6-4kG"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="RC7-b5-9JQ" secondAttribute="trailing" constant="50" id="8ea-f7-vGV"/>
+                    <constraint firstAttribute="trailing" secondItem="RC7-b5-9JQ" secondAttribute="trailing" constant="5" id="8ea-f7-vGV"/>
+                    <constraint firstItem="XBD-sZ-cdj" firstAttribute="leading" secondItem="2LD-6t-Saw" secondAttribute="leading" id="CcC-G1-Nw8"/>
                     <constraint firstAttribute="bottomMargin" secondItem="w7J-kL-9Yf" secondAttribute="bottom" constant="-1" id="DhP-O2-hyd"/>
                     <constraint firstItem="qXW-ld-nrJ" firstAttribute="centerY" secondItem="euE-3F-M5d" secondAttribute="centerY" id="FPt-Yx-hLf"/>
                     <constraint firstItem="w7J-kL-9Yf" firstAttribute="bottom" secondItem="rUU-dg-B4L" secondAttribute="bottom" constant="3" id="G5J-aJ-80h"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="rUU-dg-B4L" secondAttribute="trailing" constant="8" id="QMm-cX-ho3"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="rUU-dg-B4L" secondAttribute="trailing" constant="34" id="QMm-cX-ho3"/>
                     <constraint firstItem="rUU-dg-B4L" firstAttribute="top" secondItem="w7J-kL-9Yf" secondAttribute="top" constant="3" id="SD7-Id-YAa"/>
                     <constraint firstItem="RC7-b5-9JQ" firstAttribute="centerY" secondItem="2LD-6t-Saw" secondAttribute="centerY" id="YOi-Eh-qkB"/>
                     <constraint firstItem="w7J-kL-9Yf" firstAttribute="top" secondItem="2LD-6t-Saw" secondAttribute="topMargin" constant="1" id="YXZ-WW-mKs"/>
+                    <constraint firstItem="XBD-sZ-cdj" firstAttribute="width" secondItem="2LD-6t-Saw" secondAttribute="width" constant="-20" id="ahy-HJ-Jbh"/>
+                    <constraint firstItem="XBD-sZ-cdj" firstAttribute="top" secondItem="2LD-6t-Saw" secondAttribute="top" id="dgw-qf-JIZ"/>
                     <constraint firstItem="qXW-ld-nrJ" firstAttribute="leading" secondItem="euE-3F-M5d" secondAttribute="leading" id="efN-v6-kYz"/>
+                    <constraint firstAttribute="bottom" secondItem="XBD-sZ-cdj" secondAttribute="bottom" id="nJy-SS-zoy"/>
                     <constraint firstItem="tlf-N8-X59" firstAttribute="leading" secondItem="2LD-6t-Saw" secondAttribute="leadingMargin" constant="-3" id="rT4-2s-V13"/>
+                    <constraint firstItem="rUU-dg-B4L" firstAttribute="leading" secondItem="w7J-kL-9Yf" secondAttribute="trailing" constant="5" id="rf7-Xv-JB4"/>
                     <constraint firstItem="w7J-kL-9Yf" firstAttribute="centerY" secondItem="euE-3F-M5d" secondAttribute="centerY" id="wLN-UU-X2b"/>
                     <constraint firstItem="euE-3F-M5d" firstAttribute="leading" secondItem="2LD-6t-Saw" secondAttribute="leadingMargin" constant="7" id="x5G-Le-RJL"/>
                     <constraint firstItem="rUU-dg-B4L" firstAttribute="centerY" secondItem="tlf-N8-X59" secondAttribute="centerY" id="x9e-MG-k1I"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="heatmapValue" destination="H7n-Nf-q4m" id="zax-Kv-nmb"/>
                 <outlet property="heatmapValueHeight" destination="B96-4t-r7I" id="Dev-9x-V05"/>
                 <outlet property="heatmapView" destination="tlf-N8-X59" id="h8m-kH-jQZ"/>
+                <outlet property="uiButtonMore" destination="RC7-b5-9JQ" id="f1X-QL-Adb"/>
+                <outlet property="uiConstraintProgress" destination="ahy-HJ-Jbh" id="5pb-he-1DO"/>
                 <outlet property="uiPlaybackIndicator" destination="qXW-ld-nrJ" id="D0l-SI-Ifj"/>
                 <outlet property="uiTrackNumber" destination="euE-3F-M5d" id="w7y-Cl-zjV"/>
                 <outlet property="uiTrackRunningTime" destination="rUU-dg-B4L" id="TOn-PR-xn7"/>
                 <outlet property="uiTrackTitle" destination="w7J-kL-9Yf" id="L9A-Yt-ThS"/>
+                <outlet property="uiViewProgress" destination="XBD-sZ-cdj" id="Eyn-VY-FC6"/>
             </connections>
             <point key="canvasLocation" x="0.0" y="-3"/>
         </tableViewCell>
